# aios

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  devbox.json  justfile  lefthook.yml  mise.toml  pyproject.toml
.github/workflows/: aios-search-build.yaml  aios-search-test.yaml  code-quality.yaml  labeler.yml  operator-build.yaml  runtime-build.yaml  scorecard.yml  stale.yml  ticktick-sync-build.yaml  webhook-build.yaml
aios-search/: .gitignore  Dockerfile  pyproject.toml
aios-search/deploy/helm/aios-search/: Chart.yaml  values.yaml
aios-search/deploy/helm/aios-search/templates/: deployment.yaml  ingress.yaml  onepassword-items.yaml
aios-search/mcp/: pyproject.toml
aios-search/mcp/aios_search_mcp/: server.py
aios-search/src/aios_search/: __init__.py  api.py  auth.py  config.py  embedder.py  indexer.py  main.py  parser.py  watcher.py
aios-search/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_embedder.py  test_indexer.py  test_main.py  test_parser.py  test_watcher.py
auth-broker/: .dockerignore  Dockerfile  go.mod  go.sum
auth-broker-spike/: Dockerfile  README.md  compose.yml  justfile
auth-broker-spike/samples/: headless-login-events.jsonl
auth-broker/cmd/: main.go  main_test.go
auth-broker/internal/auth/: orchestrator.go  orchestrator_test.go  refresh.go  refresh_test.go  state.go  state_test.go  validate.go  validate_test.go
auth-broker/internal/config/: config.go  config_test.go
auth-broker/internal/lease/: lease.go  lease_test.go
auth-broker/internal/notify/: slack.go  slack_real.go  slack_test.go
auth-broker/internal/scheduler/: scheduler.go  scheduler_test.go
auth-broker/internal/server/: auth.go  bundle.go  bundle_test.go  leases.go  middleware.go  middleware_test.go  revalidate.go  server.go  server_test.go
auth-broker/internal/store/: store.go  store_test.go
auth-broker/test/e2e/: README.md  bootstrap-auth.sh  compose.yml  smoke.sh
deploy/helm/aios-search/: values.yaml
docs/: 2026-03-30-paperless-agent-sdk-design.md  2026-03-31-agent-sdk-plan.md  2026-03-31-paperless-integration-plan.md
docs/superpowers/plans/: 2026-04-30-pi-fabric-pivot-phase-minus1-to-1.md
docs/superpowers/specs/: 2026-04-30-pi-fabric-agent-pivot-design.md
docs/superpowers/spikes/: 2026-04-30-pi-auth-transport-findings.md
fabric-patterns/_bases/: code-pr.md
fabric-patterns/extract_requirements/: system.md
fabric-patterns/find_hidden_bugs/: system.md
fabric-patterns/improve_prompt/: system.md
fabric-patterns/review_code/: system.md
fabric-patterns/write_pull_request/: system.md
k8s/base/: kustomization.yaml  namespace.yaml  resource-quota.yaml
k8s/base/auth-broker/: clusterrole-tokenreview.yaml  deployment.yaml  kustomization.yaml  networkpolicy.yaml  onepassword.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
k8s/base/dashboards/: aios-agent.json
k8s/base/operator/: agentconfig-code-pr-pi.yaml  cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  service-account.yaml
k8s/base/policies/: default-agentconfig.yaml  default-sre-toolpolicy.yaml  network-policies.yaml  research-toolpolicy.yaml
k8s/base/secrets/: claude-api-key.yaml  github-app.yaml  paperless-api.yaml  slack-app.yaml  ticktick-oauth.yaml
k8s/base/ticktick-sync/: deployment.yaml  ingress-route.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
k8s/base/voice/: deployment.yaml  ingress-route.yaml  service.yaml
k8s/base/webhook/: deployment.yaml  ingress-route.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
mcp/: .env.op
mcp-proxy/: pyproject.toml
mcp-proxy/src/mcp_sampling_proxy/: __main__.py  proxy_server.py  sampling.py  upstream.py
mcp-proxy/tests/: test_config.py  test_sampling.py
mcp-servers/: kustomization.yaml
mcp-servers/dot-ai/: deployment.yaml  onepassword-item.yaml  rbac.yaml  service.yaml
mcp-servers/grafana/: deployment.yaml
mcp-servers/kubernetes/: deployment.yaml
mcp-servers/terraform/: deployment.yaml
mcp/aios_search_mcp/: config.py
operator/: .golangci.yml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
operator/.github/workflows/: lint.yml  test-e2e.yml  test.yml
operator/api/v1alpha1/: agentconfig_types.go  agentconfig_types_test.go  agenttask_types.go  groupversion_info.go  toolpolicy_types.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/config/crd/: kustomization.yaml
operator/config/default/: kustomization.yaml  metrics_service.yaml
operator/config/manager/: manager.yaml
operator/config/network-policy/: allow-metrics-traffic.yaml
operator/config/prometheus/: monitor.yaml
operator/config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
operator/internal/controller/: agenttask_controller.go  agenttask_controller_test.go  cleanup.go  cleanup_test.go  job_builder.go  job_builder_test.go
operator/internal/metrics/: metrics.go  (+1 more)
runtime/: Dockerfile  package-lock.json  package.json  tsconfig.json
runtime/scripts/: compose-system-prompt.test.ts  compose-system-prompt.ts
runtime/src/: agent-tools.test.ts  agent-tools.ts  auth-broker.test.ts  auth-broker.ts  config.test.ts  config.ts  executor.test.ts  executor.ts  fabric.test.ts  fabric.ts  github.test.ts  github.ts  index.ts  memory.test.ts  memory.ts  sandbox.test.ts  sandbox.ts  slack.test.ts  slack.ts  types.ts
src/aios_search/: config.py  embedder.py  indexer.py  main.py  watcher.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_embedder.py  test_indexer.py  test_mcp.py  test_watcher.py
ticktick-sync/: .golangci.yml  Dockerfile  go.mod  go.sum  justfile
ticktick-sync/cmd/: main.go
voice/: Dockerfile  pyproject.toml
voice/src/: __init__.py  __main__.py  config.py  gateway.py  localai.py  session.py  slack_integration.py
voice/static/: index.html
voice/tests/: conftest.py  test_gateway.py  test_localai.py  test_session.py  test_slack_integration.py
webhook/: .golangci.yml  Dockerfile  go.mod  go.sum
webhook/cmd/: main.go
(+76 files in other folders)
