[project]
name = "aios-search"
version = "0.1.0"
description = "Semantic search for AIOS Obsidian vault"
requires-python = "==3.14.3"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "qdrant-client==1.17.1",
    "watchfiles==1.1.1",
    "python-frontmatter==1.1.0",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "numpy==2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "pytest-cov==7.1.0",
]
mcp = [
    "mcp[cli]==1.26.0",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["mcp"]

[tool.coverage.run]
omit = ["src/aios_search/main.py"]
