[project]
name = "aios-search"
version = "0.1.0"
description = "Semantic search for AIOS Obsidian vault"
requires-python = "==3.14.4"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "psycopg[binary,pool]==3.3.3",
    "pgvector==0.4.2",
    "watchfiles==1.1.1",
    "python-frontmatter==1.1.0",
    "pydantic-settings==2.14.0",
    "httpx==0.28.1",
    "numpy==2.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "pytest-cov==7.1.0",
    "testcontainers[postgres]==4.14.2",
]
mcp = [
    "mcp[cli]==1.27.0",
    "httpx==0.28.1",
    "pydantic-settings==2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["mcp"]

[tool.coverage.run]
omit = ["src/aios_search/main.py"]
