[project]
name = "mcp-sampling-proxy"
version = "0.1.0"
description = "MCP proxy that bridges sampling/createMessage to claude -p"
requires-python = "==3.14.4"
dependencies = [
    "mcp==1.27.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
mcp-sampling-proxy = "mcp_sampling_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sampling_proxy"]
