[project]
name = "aios-voice-gateway"
version = "0.1.0"
description = "Push-to-talk voice gateway for AIOS agents via LocalAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.45.0",
    "websockets==16.0",
    "httpx==0.28.1",
    "slack-sdk==3.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
