[project]
name = "aios-voice-gateway"
version = "0.1.0"
description = "Push-to-talk voice gateway for AIOS agents via LocalAI"
requires-python = "==3.14.4"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "websockets==16.0",
    "httpx==0.28.1",
    "slack-sdk==3.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx",
    # slack-sdk's async client lazily imports aiohttp; tests that import
    # slack_sdk.web.async_client need it available even though our prod code
    # uses the sync client.
    "aiohttp==3.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
