[project]
name = "aios-search-mcp"
version = "0.1.0"
description = "MCP server for AIOS semantic search"
requires-python = "==3.14.3"
dependencies = [
    "mcp[cli]==1.27.0",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aios_search_mcp"]
